# vscode_cpp_projects

./: .gitignore  README.md
02_cmake_helloworld/: main.cpp
03_cmake_simple_include/: CMakeLists.txt  box.h  main.cpp
04_5_cmake_create_library/: CMakeLists.txt  Message.cpp  Message.hpp  README.md  hello-world.cpp
04_cmake_template_class/: CMakeLists.txt  template_array.cpp
05_cmake_vcpkg/: main.cpp  readme.md
06_cmake_opencv_intro/: CMakeLists.txt  main.cpp
07_vcpkg_mathgl/: CMakeLists.txt  error msg.txt  main.cpp
08_vcpkg_plplot/: CMakeLists.txt  main.cpp
09_vcpkg_raylib/: CMakeLists.txt  CMakeLists.txt.raylib  CMakeLists.txt.vcpkg  main2.cpp
10a_cmake_zeroMQ_server/: main.cpp
11a_zeroMQ_multi_part_server/: main.cpp
11b_zeroMQ_multi_part_client/: CMakeLists.txt  main.cpp
1_cpp_helloworld/: helloworld  helloworld.cpp
2_cmake_helloworld/: CMakeLists.txt
3_cmake_simple_include/: box.cpp
4_cmake_template_class/: main.cpp  template_bubble_sort.cpp  template_max.cpp
5_cmake_vcpkg/: CMakeLists.txt  main.cpp  readme.md
7_vcpkg_mathgl/: CMakeLists.txt
7a_vcpkg_mathgl/: main.cpp
9_vcpkg_raylib/: CMakeLists.txt  errors.txt  main2.cpp
